--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -613,15 +613,19 @@ header{
     display:flex;
     flex-flow: row nowrap;
     justify-content: center;
-    margin-bottom:10px;
+    align-items: center;
+    margin-bottom:20px;
 
     &_user{
         border:1px solid rgb(200,200,200);
         text-align: center;
+        font-size: 130%;
+        vertical-align: middle;
         border-radius: 50px;
         padding:20px;
+        padding-top:30px;
         margin:0 5px;
-        width:30px;
+        width:40px;
         height:30px;
         font-weight:bolder;
 
@@ -631,7 +635,7 @@ header{
         }
 
         &.isActive{
-            border:2px solid black;
+            border:3px solid black;
         }
         
         &.userColor_green{
