--- a/public/css/style.css
+++ b/public/css/style.css
@@ -543,29 +543,99 @@ header {
   border: 1px solid #646464;
   cursor: pointer;
 }
-.usersList_user.isActive {
-  border: 3px solid black;
+
+.border {
+  border: 1px solid #c8c8c8;
 }
-.usersList_user.userColor_green {
+
+.songUser {
+  color: white;
+  border-color: white;
+  padding: 0.2rem 0.4rem;
+  border-radius: 10rem;
+  font-size: 0.6rem;
+}
+.songUser:hover {
+  cursor: pointer;
+}
+
+.notSongUser {
+  padding: 0.2rem 0.4rem;
+  border-radius: 10rem;
+  font-size: 0.6rem;
+}
+.notSongUser:hover {
+  cursor: pointer;
+}
+
+.userColor_green {
   border-color: #45c971;
 }
-.usersList_user.userColor_blue {
+.userColor_green.songUser {
+  background-color: #45c971;
+}
+.userColor_green.isActive {
+  border: 3px solid #45c971;
+}
+
+.userColor_blue {
   border-color: #2c71f0;
 }
-.usersList_user.userColor_red {
+.userColor_blue.songUser {
+  background-color: #2c71f0;
+}
+.userColor_blue.isActive {
+  border: 3px solid #2c71f0;
+}
+
+.userColor_red {
   border-color: #f34242;
 }
-.usersList_user.userColor_yellow {
+.userColor_red.songUser {
+  background-color: #f34242;
+}
+.userColor_red.isActive {
+  border: 3px solid #f34242;
+}
+
+.userColor_yellow {
   border-color: #fcc120;
 }
-.usersList_user.userColor_orange {
+.userColor_yellow.songUser {
+  background-color: #fcc120;
+}
+.userColor_yellow.isActive {
+  border: 3px solid #fcc120;
+}
+
+.userColor_orange {
   border-color: #fa7537;
 }
-.usersList_user.userColor_pink {
+.userColor_orange.songUser {
+  background-color: #fa7537;
+}
+.userColor_orange.isActive {
+  border: 3px solid #fa7537;
+}
+
+.userColor_pink {
   border-color: #f02ca5;
 }
-.usersList_user.userColor_grey {
+.userColor_pink.songUser {
+  background-color: #f02ca5;
+}
+.userColor_pink.isActive {
+  border: 3px solid #f02ca5;
+}
+
+.userColor_grey {
   border-color: #727272;
+}
+.userColor_grey.songUser {
+  background-color: #727272;
+}
+.userColor_grey.isActive {
+  border: 3px solid #727272;
 }
 
 .longText {
@@ -574,6 +644,15 @@ header {
 
 .dataSheet {
   margin-top: 20px;
+}
+
+.song_usersList {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.song_usersList > li {
+  margin-right: 0.3rem;
 }
 
 .kidsMoviesBtn {
