Creation of a censoring system to hide videos which are not adapted

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -101,7 +101,7 @@ header{
     position:relative;
     margin:10px;
     width:10%;
-    min-width:200px;
+    min-width:100px;
     padding:10px;
     background-color:white;
     border-radius:10px;
@@ -123,6 +123,11 @@ header{
     h3{
         margin-top:10px;
         margin-bottom:10px;
+        font-size: .9rem;
+    }
+
+    p {
+        font-size: .8rem;
     }
     
     a{
@@ -443,6 +448,14 @@ header{
     background-color: $yellowKids;
 }
 
+.blueBG{
+    background-color: $blueKids;
+}
+
+.greenBG{
+    background-color: $greenKids;
+}
+
 .redBG{
     background-color: $redKids;
 }
@@ -591,6 +604,10 @@ header{
             }
 
             &-list{
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+
                 &-item{
                     margin-top:5px;
                     padding-left:10px;
@@ -601,6 +618,15 @@ header{
 
                         &:hover{
                             color:$darkColor;
+                        }
+
+                        img {
+                            border: 2px solid #ffb419;
+                            height: 100px;
+
+                            &:hover {
+                                box-shadow: 0 0 5px #000000dd;
+                            }
                         }
                     }
                 }
@@ -779,10 +805,34 @@ header{
     background-color: $yellowKids;
 }
 
+.kidsMoviesBtn.blueBG:hover{
+    background-color: $blueKids;
+}
+
+.kidsMoviesBtn.greenBG:hover{
+    background-color: $greenKids;
+}
+
 .kidsMoviesBtn.redBG:hover{
     background-color: $redKids;
 }
 
 #videoPlayerContainer>iframe{
     margin-bottom:20px;
+}
+
+.censoredBlock {
+    background-color: black;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 5000;
+    text-align: center;
+
+    img {
+        margin-top: 10rem;
+        height: 50%;
+    }
 }
