--- a/public/css/style.css
+++ b/public/css/style.css
@@ -458,6 +458,23 @@ header {
   content: url("../../img/gamesIcon.png");
 }
 
+.gameBlock {
+  background-color: #555555;
+  border-radius: 1rem;
+  padding: 1rem;
+  margin: 1rem;
+}
+.gameBlock * {
+  color: white;
+}
+.gameBlock img {
+  margin: 1rem;
+  height: 6rem;
+}
+.gameBlock:hover {
+  background-color: #b8b8b8;
+}
+
 .section {
   width: 100%;
   display: flex;
