--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -545,26 +545,6 @@ header{
     }
 }
 
-.gameBlock {
-    background-color: rgb(85, 85, 85);
-    border-radius: 1rem;
-    padding: 1rem;
-    margin: 1rem;
-
-    * {
-        color: white;
-    }
-
-    img {
-        margin: 1rem;
-        height: 6rem;
-    }
-
-    &:hover {
-        background-color: rgb(184, 184, 184);
-    }
-}
-
 .section{
     width:100%;
     display:flex;
@@ -724,6 +704,27 @@ header{
 }
 
 .game{
+    &Block {
+        position: relative;
+        background-color: rgb(85, 85, 85);
+        border-radius: 1rem;
+        padding: 1rem;
+        margin: 1rem;
+    
+        * {
+            color: white;
+        }
+    
+        img {
+            margin: 1rem;
+            height: 6rem;
+        }
+    
+        &:hover {
+            background-color: rgb(184, 184, 184);
+        }
+    }
+    
     &Levels {
         margin: 0 .5rem;
     }
@@ -745,6 +746,21 @@ header{
 
         &-list {
             margin-bottom: 2rem;
+        }
+    }
+
+    &OpenLink {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 3000;
+        opacity: 0;
+        border-radius: 1rem;
+
+        &:hover {
+            cursor: pointer;
         }
     }
 }
