--- a/public/css/style.css
+++ b/public/css/style.css
@@ -458,23 +458,6 @@ header {
   content: url("../../img/gamesIcon.png");
 }
 
-.gameBlock {
-  background-color: #555555;
-  border-radius: 1rem;
-  padding: 1rem;
-  margin: 1rem;
-}
-.gameBlock * {
-  color: white;
-}
-.gameBlock img {
-  margin: 1rem;
-  height: 6rem;
-}
-.gameBlock:hover {
-  background-color: #b8b8b8;
-}
-
 .section {
   width: 100%;
   display: flex;
@@ -613,6 +596,23 @@ header {
   margin-bottom: 1rem;
 }
 
+.gameBlock {
+  position: relative;
+  background-color: #555555;
+  border-radius: 1rem;
+  padding: 1rem;
+  margin: 1rem;
+}
+.gameBlock * {
+  color: white;
+}
+.gameBlock img {
+  margin: 1rem;
+  height: 6rem;
+}
+.gameBlock:hover {
+  background-color: #b8b8b8;
+}
 .gameLevels {
   margin: 0 0.5rem;
 }
@@ -632,6 +632,19 @@ header {
 }
 .gameResults-list {
   margin-bottom: 2rem;
+}
+.gameOpenLink {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3000;
+  opacity: 0;
+  border-radius: 1rem;
+}
+.gameOpenLink:hover {
+  cursor: pointer;
 }
 
 .player-field {
