Add some modifications about the memory game, the structure and jukebox

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -661,6 +661,10 @@ header{
         width:40px;
         height:30px;
         font-weight:bolder;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        color: rgba(255,255,255,0);
 
         &:hover{
             border:1px solid rgb(100,100,100);
@@ -780,6 +784,10 @@ header{
         padding: 1rem;
         margin-bottom: 1rem;
         line-height: 2.8rem;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        color: rgba(255,255,255,0);
     
         &:hover {
             cursor: pointer;
@@ -956,8 +964,16 @@ header{
     }
 }
 
-#videoPlayerContainer>iframe{
-    margin-bottom:20px;
+#videoPlayerContainer{
+    &.random {
+        position: relative;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    &>iframe{
+        margin-bottom:20px;
+    }
 }
 
 .censoredBlock {
@@ -969,6 +985,17 @@ header{
     left: 0;
     z-index: 5000;
     text-align: center;
+
+    &.random{
+        height: 100%;
+        width: 100%;
+        position: absolute;
+
+        img {
+            margin-top: 0rem;
+            height: 100%;
+        }
+    }
 
     img {
         margin-top: 10rem;
