--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -708,24 +708,45 @@ header{
 }
 
 .game{
-    &Block {
-        position: relative;
-        background-color: rgb(85, 85, 85);
-        border-radius: 1rem;
-        padding: 1rem;
-        margin: 1rem;
-    
-        * {
-            color: white;
-        }
-    
-        img {
+    &Block{
+        &__btn {
+            position: relative;
+            background-color: rgb(85, 85, 85);
+            border-radius: 1rem;
+            padding: 1rem;
             margin: 1rem;
-            height: 6rem;
+
+            * {
+                color: white;
+            }
+        
+            img {
+                margin: 1rem;
+                height: 6rem;
+            }
+        
+            &:hover {
+                background-color: rgb(184, 184, 184);
+            }
         }
-    
-        &:hover {
-            background-color: rgb(184, 184, 184);
+
+        &__highScores{
+            &-table {
+                border-collapse: collapse;
+                width:auto;
+                margin: .3rem auto .6rem;
+
+                &-cell {
+                    border: 1px solid $darkColor;
+                    padding: 0.3rem;
+
+                    &--head {
+                        color: white;
+                        font-weight: 700;
+                        background-color: $darkColor;
+                    }
+                }
+            }
         }
     }
     
