--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -731,6 +731,10 @@ header{
         }
 
         &__highScores{
+            margin-bottom: 2rem;
+            padding-bottom: 1rem;
+            border-bottom: 1px solid $mediumColor;
+
             &-table {
                 border-collapse: collapse;
                 width:auto;
@@ -744,6 +748,10 @@ header{
                         color: white;
                         font-weight: 700;
                         background-color: $darkColor;
+                    }
+
+                    &--highlight {
+                        font-weight: bold;
                     }
                 }
             }
