--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1203,3 +1203,80 @@ header{
         border-radius: .5rem;
     }
 }
+
+.labyrinth{
+    &-grid{
+        border-collapse: collapse;
+        background-color: #9b5645;
+        border-radius: 20px;
+        width: 580px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10px;
+    }
+    &-cell{
+        &.boardCorner{
+            position: relative;
+
+            &:before{
+                content:'.';
+                position: absolute;
+                z-index: 10000;
+                display: block;
+                width: 25px;
+                height: 25px;
+                top: 35%;
+                left: 35%;
+                border-radius: 50%;
+                border: 1px solid black;
+            }
+
+            &.topLeft{
+                &:before{
+                    top: 36%;
+                    left: 37%;
+                    background-color: #2c71f0;
+                }
+            }
+            &.topRight{
+                &:before{
+                    top: 36%;
+                    left: 32%;
+                    background-color: #f34242;
+                }
+            }
+            &.bottomLeft{
+                &:before{
+                    top: 32%;
+                    left: 37%;
+                    background-color: #45c971;
+                }
+            }
+            &.bottomRight{
+                &:before{
+                    top: 32%;
+                    left: 32%;
+                    background-color: #f02ca5;
+                }
+            }
+        }
+    }
+    &-walls{
+        margin-bottom: -4px;
+        width: 100%;
+        height: auto;
+
+        &.turnRight{
+            transform: rotate(180deg);
+        }
+        &.turnDown{
+            transform: rotate(270deg);
+        }
+        &.turnUp{
+            transform: rotate(90deg);
+        }
+        &.turnLeft{
+            transform: rotate(0deg);
+        }
+    }
+}
