--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1005,4 +1005,66 @@ header {
   border-radius: 0.5rem;
 }
 
+.labyrinth-grid {
+  border-collapse: collapse;
+  background-color: #9b5645;
+  border-radius: 20px;
+  width: 580px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+}
+.labyrinth-cell.boardCorner {
+  position: relative;
+}
+.labyrinth-cell.boardCorner:before {
+  content: ".";
+  position: absolute;
+  z-index: 10000;
+  display: block;
+  width: 25px;
+  height: 25px;
+  top: 35%;
+  left: 35%;
+  border-radius: 50%;
+  border: 1px solid black;
+}
+.labyrinth-cell.boardCorner.topLeft:before {
+  top: 36%;
+  left: 37%;
+  background-color: #2c71f0;
+}
+.labyrinth-cell.boardCorner.topRight:before {
+  top: 36%;
+  left: 32%;
+  background-color: #f34242;
+}
+.labyrinth-cell.boardCorner.bottomLeft:before {
+  top: 32%;
+  left: 37%;
+  background-color: #45c971;
+}
+.labyrinth-cell.boardCorner.bottomRight:before {
+  top: 32%;
+  left: 32%;
+  background-color: #f02ca5;
+}
+.labyrinth-walls {
+  margin-bottom: -4px;
+  width: 100%;
+  height: auto;
+}
+.labyrinth-walls.turnRight {
+  transform: rotate(180deg);
+}
+.labyrinth-walls.turnDown {
+  transform: rotate(270deg);
+}
+.labyrinth-walls.turnUp {
+  transform: rotate(90deg);
+}
+.labyrinth-walls.turnLeft {
+  transform: rotate(0deg);
+}
+
 /*# sourceMappingURL=style.css.map */
