--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1049,6 +1049,12 @@ header{
             padding: .4rem;
         }
 
+        tr {
+            &:hover{
+                background-color:#ececec;
+            }
+        }
+
         .link {
             &.editButton {
                 color: rgb(0,100,200);
