--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1212,18 +1212,20 @@ header{
 
 .labyrinth{
     &-grid{
+        //display: grid;
+        //grid-template-columns: repeat(7, 1fr);
         border-collapse: collapse;
         background-color: #9b5645;
         border-radius: 20px;
-        width: 580px;
+        width: 670px;
         margin-left: auto;
         margin-right: auto;
         margin-top: 10px;
     }
     &-cell{
-        &.boardCorner{
-            position: relative;
+        position: relative;
 
+        &.boardCorner{
             &:before{
                 content:'.';
                 position: absolute;
@@ -1271,6 +1273,7 @@ header{
         margin-bottom: -4px;
         width: 100%;
         height: auto;
+        opacity: 1;
 
         &.turnRight{
             transform: rotate(180deg);
@@ -1283,6 +1286,16 @@ header{
         }
         &.turnLeft{
             transform: rotate(0deg);
+        }
+
+        &.outer{
+            &:hover{
+                cursor: pointer;
+            }
+        }
+
+        &.displaced{
+            position: absolute;
         }
     }
 }
