Creation of the main logic of the labyrinth game

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -4,10 +4,20 @@ $medLightColor:rgb(200,200,200);
 $lightColor:rgb(240,240,240);
 $testColor:rgba(255,0,0,0.5);
 
-$blueKids:rgb(100,200,255);
+$blueKidsDark:rgb(5, 126, 232);
+$redKidsDark:rgb(214, 46, 0);
+$greenKidsDark:rgb(14, 153, 60);
+$yellowKidsDark:rgb(198, 171, 14);
+
+$blueKids:rgb(54, 185, 255);
 $redKids:rgb(255, 62, 14);
 $greenKids:rgb(69, 201, 113);
 $yellowKids:rgb(255, 223, 40);
+
+$blueKidsLight:rgb(161, 222, 255);
+$redKidsLight:rgb(255, 127, 95);
+$greenKidsLight:rgb(118, 240, 159);
+$yellowKidsLight:rgb(255, 246, 193);
 
 $blueUser:rgb(44, 113, 240);
 $redUser:rgb(243, 66, 66);
@@ -546,14 +556,18 @@ header{
 }
 
 .section{
-    width:100%;
+    width: 100%;
     display:flex;
     justify-content: center;
 }
 
 .section-container{
-    width:70%;
+    width: 70%;
     text-align:center;
+
+    &.memoryExtension{
+        width: 90%;
+    }
 }
 
 .pageTitle{
@@ -1224,47 +1238,111 @@ header{
     }
     &-cell{
         position: relative;
+        --playerTopPosition: 25px;
+        --playerLeftPosition: 25px;
+
+        &:before{
+            content:'.';
+            position: absolute;
+            z-index: 10000;
+            width: 25px;
+            height: 25px;
+            top: var(--playerTopPosition);
+            left: var(--playerLeftPosition);
+            border-radius: 50%;
+            border: 1px solid black;
+            opacity: 0;
+            display: none;
+        }
+
+        &.bluePlayer {
+            &:before{
+                background-color: #2c71f0;
+                opacity: 1;
+                display: block;
+            }
+            &.ghost{
+                &:before{
+                    background-color: #2c71f0;
+                    opacity: 1;
+                }
+            }
+        }
+        &.redPlayer {
+            &:before{
+                background-color: #f34242;
+                opacity: 1;
+                display: block;
+            }
+            &.ghost{
+                &:before{
+                    background-color: #f34242;
+                    opacity: 1;
+                }
+            }
+        }
+        &.greenPlayer {
+            &:before{
+                background-color: #45c971;
+                opacity: 1;
+                display: block;
+            }
+            &.ghost{
+                &:before{
+                    background-color: #45c971;
+                    opacity: 1;
+                }
+            }
+        }
+        &.pinkPlayer {
+            &:before{
+                background-color: #f02ca5;
+                opacity: 1;
+                display: block;
+            }
+            &.ghost{
+                &:before{
+                    background-color: #f02ca5;
+                    opacity: 1;
+                }
+            }
+        }
+        &.ghost{
+            &:before{
+                background-color: #aaaaaa;
+                opacity: .4;
+                display: block;
+            }
+
+            &:hover{
+                cursor: pointer;
+
+                &:before{
+                    background-color: #ffffff;
+                    opacity: .7;
+                }
+            }
+        }
 
         &.boardCorner{
-            &:before{
-                content:'.';
-                position: absolute;
-                z-index: 10000;
-                display: block;
-                width: 25px;
-                height: 25px;
-                top: 35%;
-                left: 35%;
-                border-radius: 50%;
-                border: 1px solid black;
-            }
-
-            &.topLeft{
+            &.blueStartSlot {
                 &:before{
-                    top: 36%;
-                    left: 37%;
-                    background-color: #2c71f0;
+                    border: 2px solid #2c71f0;
                 }
             }
-            &.topRight{
+            &.redStartSlot {
                 &:before{
-                    top: 36%;
-                    left: 32%;
-                    background-color: #f34242;
+                    border: 2px solid #f34242;
                 }
             }
-            &.bottomLeft{
+            &.greenStartSlot {
                 &:before{
-                    top: 32%;
-                    left: 37%;
-                    background-color: #45c971;
+                    border: 2px solid #45c971;
                 }
             }
-            &.bottomRight{
+            &.pinkStartSlot {
                 &:before{
-                    top: 32%;
-                    left: 32%;
-                    background-color: #f02ca5;
+                    border: 2px solid #f02ca5;
                 }
             }
         }
@@ -1297,5 +1375,26 @@ header{
         &.displaced{
             position: absolute;
         }
+    }
+}
+
+#endTurnBtn {
+    position: fixed;
+    right: 100px;
+    bottom: 100px;
+    padding: 1rem 3rem;
+    font-weight: 700;
+    font-size: 2rem;
+    border-radius: 1rem;
+    cursor: pointer;
+    background-color: $greenKids;
+    color: $greenKidsDark;
+    border: none;
+    border-bottom: 4px solid $greenKidsDark;
+
+    &:hover {
+        background-color: $greenKidsLight;
+        border-color: $greenKidsDark;
+        border: none;
     }
 }
