Addition of collection Songs
We can now choose between the songs from a single movie or the songs of all movies related to its collection

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -687,6 +687,19 @@ header{
     }
 }
 
+.movieMusicListOptions {
+    padding-bottom: 1rem;
+
+    label {
+        color: white;
+        font-weight: bold;
+    }
+
+    input {
+        margin-left: 1rem;
+    }
+}
+
 .musicFilters {
     display: flex;
     justify-content: space-between;
