--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -723,6 +723,24 @@ header{
     }
 }
 
+#randomModeButton{
+    font-weight: bold;
+    cursor: pointer;
+    padding-bottom: .2rem;
+
+    &:hover {
+        color: grey;
+    }
+
+    &.isActive {
+        color: rgb(47, 179, 255);
+    }
+
+    &.randomModeEnabled{
+        color: rgb(47, 179, 255);
+    }
+}
+
 .border {
     border:1px solid rgb(200,200,200);
 }
